debug_error.txt
file:///C:/Users/pc/Documents/GitHub/mydeeptech-be/controller/dtUser.controller.js:5
import dtProjectService from "../services/dtProject.service.js";
       ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../services/dtProject.service.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26) {
  [stack]: [Getter/Setter],
  [message]: "The requested module '../services/dtProject.service.js' does not provide an export named 'default'"
}
file:///C:/Users/pc/Documents/GitHub/mydeeptech-be/controller/dtUser.controller.js:5
import dtProjectService from "../services/dtProject.service.js";
       ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../services/dtProject.service.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)